# gsdc

./: CONFIG  FIELD  FIELD_example  README.md  input.gsd  main.py  pyproject.toml
gsdc/: __init__.py  bonds_parser.py  bondset.py  check_graph.py  check_script.py  constructor.py  exceptions.py  gsdc.py  molecule.py  periodic_box.py  types_parser.py
tests/: test_bonds_parser.py  test_check_graph.py  test_check_script.py  test_constructor.py  test_periodic_box.py  test_types_parser.py
